# fastapibackend-newsagent

./: .gitignore  README.md  app.py  fastapikey.pem  pyproject.toml  requirements.txt
src/newsrep/: crew.py  main.py
src/newsrep/config/: agents.yaml  tasks.yaml
